ratio fixed and plotted

--- a/network_size.ipynb
+++ b/network_size.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
        " '2016_12']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -398,7 +398,7 @@
     "    ax2 = fig.add_axes([left, bottom, width, height])\n",
     "    ax2.plot(np.arange(1,33),stats.male_to_female_ratio(df),marker=\"o\", label=\"ratio\",color=\"black\")\n",
     "#     ax2.set_legend(loc='upper right')\n",
-    "    ax2.set_ylim([0,30])\n",
+    "    ax2.set_ylim([0,0.2])\n",
     "    ax2.set_yscale('linear')\n",
     "    ax2.set_xlabel(\"year and month\", fontsize=13)\n",
     "    ax2.set_xticklabels(['2001_06','2003_06','2005_12','2008_06','2010_12','2013_06','2015_12'],rotation='vertical')\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -430,32 +430,41 @@
    "source": [
     "# nets = [net_size, net_size_de, net_size_fr, net_size_gb, net_size_ru, net_size_us]\n",
     "# names = [\"all\",\"de\",\"fr\",\"gb\",\"ru\",\"us\"]\n",
-    "ratio_all = stats.male_to_female_ratio(net_size)\n",
-    "ratio_de = stats.male_to_female_ratio(net_size_de)\n",
-    "ratio_fr = stats.male_to_female_ratio(net_size_fr)\n",
-    "ratio_gb = stats.male_to_female_ratio(net_size_gb)\n",
-    "ratio_ru = stats.male_to_female_ratio(net_size_ru)\n",
-    "ratio_us = stats.male_to_female_ratio(net_size_us)\n",
+    "# ratio_all = stats.male_to_female_ratio(net_size)\n",
+    "# ratio_de = stats.male_to_female_ratio(net_size_de)\n",
+    "# ratio_fr = stats.male_to_female_ratio(net_size_fr)\n",
+    "# ratio_gb = stats.male_to_female_ratio(net_size_gb)\n",
+    "# ratio_ru = stats.male_to_female_ratio(net_size_ru)\n",
+    "# ratio_us = stats.male_to_female_ratio(net_size_us)\n",
     "\n",
-    "ratio_df = pd.DataFrame({\n",
-    "    'all': ratio_all,\n",
-    "    'de': ratio_de,\n",
-    "    'fr': ratio_fr,\n",
-    "    'gb': ratio_gb,\n",
-    "    'ru': ratio_ru,\n",
-    "    'us': ratio_us\n",
-    "})\n",
+    "# ratio_df = pd.DataFrame({\n",
+    "#     'all': ratio_all,\n",
+    "#     'de': ratio_de,\n",
+    "#     'fr': ratio_fr,\n",
+    "#     'gb': ratio_gb,\n",
+    "#     'ru': ratio_ru,\n",
+    "#     'us': ratio_us\n",
+    "# })\n",
     "\n",
-    "ratio_df.to_json(\"data/stats/ratio.json\")"
+    "# ratio_df.to_json(\"data/stats/ratio.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vujovisn\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\matplotlib\\pyplot.py:524: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  max_open_warning, RuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "path = \"plots/network_size/\"\n",
     "plot_size_ratio(net_size, \"Global\",path)\n",
@@ -464,6 +473,94 @@
     "plot_size_ratio(ns_de, \"Germany\",path)\n",
     "plot_size_ratio(ns_fr, \"France\",path)\n",
     "plot_size_ratio(ns_gb, \"Great Britain\",path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot_multi_ratio(df_dict, title, path_save,scale=\"linear\"):\n",
+    "    df = df_dict\n",
+    "    fig,ax = plt.subplots(figsize=(16,12))\n",
+    "    m_nodes = df['all'].m_nodes.values\n",
+    "    f_nodes = df['all'].f_nodes.values\n",
+    "    \n",
+    "    ###### subplot\n",
+    "    left, bottom, width, height = [0.18, 0.55, 0.30, 0.30]\n",
+    "    ax2 = fig.add_axes([left, bottom, width, height])\n",
+    "    ### unpack df_dict\n",
+    "    ax2.plot(np.arange(1,33),stats.male_to_female_ratio(df['all']),marker=\"o\", label=\"Global\",color=\"black\")\n",
+    "    ax2.plot(np.arange(1,33),stats.male_to_female_ratio(df['us']),marker=\"*\", label=\"US\",color=\"red\")\n",
+    "    ax2.plot(np.arange(1,33),stats.male_to_female_ratio(df['fr']),marker=\"*\", label=\"FRA\",color=\"blue\")\n",
+    "    ax2.plot(np.arange(1,33),stats.male_to_female_ratio(df['de']),marker=\"*\", label=\"GER\",color=\"orange\")\n",
+    "    ax2.plot(np.arange(1,33),stats.male_to_female_ratio(df['ru']),marker=\"*\", label=\"RUS\",color=\"green\")\n",
+    "    ax2.plot(np.arange(1,33),stats.male_to_female_ratio(df['gb']),marker=\"*\", label=\"GB\",color=\"gray\")\n",
+    "#     ax2.set_legend(loc='upper right')\n",
+    "    ax2.set_ylim([0,0.2])\n",
+    "    ax2.set_yscale('linear')\n",
+    "    ax2.set_xlabel(\"year and month\", fontsize=13)\n",
+    "    ax2.set_xticklabels(['2001_06','2003_06','2005_12','2008_06','2010_12','2013_06','2015_12'],rotation='vertical')\n",
+    "#     ax2.set_xticks(np.arange(1,33,1),minor=True)\n",
+    "    ax2.set_ylabel(\"female to male ratio\", fontsize=13)\n",
+    "    ax2.set_xticks(np.arange(1,33,1),minor=True)\n",
+    "    ax2.legend(loc='lower right')\n",
+    "    \n",
+    "    ###### main plot\n",
+    "    ax.plot(np.arange(1,33),m_nodes,marker=\">\", label=\"male\")\n",
+    "    ax.plot(np.arange(1,33),f_nodes, marker=\"X\",label=\"female\")\n",
+    "    ax.legend(loc='lower right')\n",
+    "    ax.set_yscale(scale)\n",
+    "    ax.set_xlabel(\"year_month\", fontsize=20)\n",
+    "    ax.set_xticklabels(['2001_06','2001_06','2003_06','2005_12','2008_06','2010_12','2013_06','2015_12'],rotation='vertical')\n",
+    "    ax.set_xticks(np.arange(1,33,1),minor=True)\n",
+    "    ax.set_ylabel(\"number of politicians\", fontsize=20)\n",
+    "    ax.set_title(title, fontsize=33)\n",
+    "    path = path_save+\"/\"+title+\".png\"\n",
+    "    plt.savefig(path)\n",
+    "#     plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "path = \"plots/network_size/\"\n",
+    "df_dict = {\n",
+    "    'all': net_size,\n",
+    "    'us': ns_us,\n",
+    "    'de': ns_de,\n",
+    "    'gb': ns_gb,\n",
+    "    'ru': ns_ru,\n",
+    "    'fr': ns_fr\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vujovisn\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\matplotlib\\pyplot.py:524: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  max_open_warning, RuntimeWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_multi_ratio(df_dict, \"Network size and ratio (Global, US, FRA, GER, RUS, GB)\", path)"
    ]
   },
   {
