--- a/model/page_views.ipynb
+++ b/model/page_views.ipynb
@@ -710,6 +710,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "result.to_json(\"politicians_pw.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
