--- a/pageviews/scraper.ipynb
+++ b/pageviews/scraper.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
        "'https://dumps.wikimedia.org/other/pagecounts-raw/2008/2008-01/'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,6 +245,142 @@
    ],
    "source": [
     "pd.read_csv(\"2014.csv\").head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save URLs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_url(file_name):\n",
+    "    \"\"\" Goes to lambda function\n",
+    "    \"\"\"\n",
+    "    date = file_name.split(\"-\")[1]\n",
+    "    year = date[:4]\n",
+    "    month = date[4:6]\n",
+    "    url = form_url(year, month, file_name)\n",
+    "    return url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2008.csv saved!\n",
+      "2009.csv saved!\n",
+      "2010.csv saved!\n",
+      "2011.csv saved!\n",
+      "2012.csv saved!\n",
+      "2013.csv saved!\n",
+      "2014.csv saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for year in years:\n",
+    "    path = str(year)+\".csv\"\n",
+    "    df = pd.read_csv(path)\n",
+    "    df[\"url\"] = df[\"file\"].apply(lambda x: get_url(x))\n",
+    "    df.to_csv(path,index=False)\n",
+    "    print(path+\" saved!\")\n",
+    "#     print(len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>size</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>pagecounts-20140101-000000.gz</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>https://dumps.wikimedia.org/other/pagecounts-r...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pagecounts-20140101-010000.gz</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>https://dumps.wikimedia.org/other/pagecounts-r...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pagecounts-20140101-020000.gz</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>https://dumps.wikimedia.org/other/pagecounts-r...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>pagecounts-20140101-030001.gz</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>https://dumps.wikimedia.org/other/pagecounts-r...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>pagecounts-20140101-040008.gz</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>https://dumps.wikimedia.org/other/pagecounts-r...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            file  size  \\\n",
+       "0  pagecounts-20140101-000000.gz  82.0   \n",
+       "1  pagecounts-20140101-010000.gz  83.0   \n",
+       "2  pagecounts-20140101-020000.gz  79.0   \n",
+       "3  pagecounts-20140101-030001.gz  79.0   \n",
+       "4  pagecounts-20140101-040008.gz  79.0   \n",
+       "\n",
+       "                                                 url  \n",
+       "0  https://dumps.wikimedia.org/other/pagecounts-r...  \n",
+       "1  https://dumps.wikimedia.org/other/pagecounts-r...  \n",
+       "2  https://dumps.wikimedia.org/other/pagecounts-r...  \n",
+       "3  https://dumps.wikimedia.org/other/pagecounts-r...  \n",
+       "4  https://dumps.wikimedia.org/other/pagecounts-r...  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -2270,7 +2406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
