added final filtered graphs

--- a/connecting_data.ipynb
+++ b/connecting_data.ipynb
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -700,6 +700,18 @@
    ],
    "source": [
     "save(df, save_path, 2016)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# df = add_pw_stats(2009, cohort_merged, net_stats_path, pageviews_path)\n",
+    "# save(df, save_path, 2009)"
    ]
   },
   {
