new graph stats

--- a/add_stats_to_network.ipynb
+++ b/add_stats_to_network.ipynb
@@ -136,19 +136,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
-    "# files"
+    "# Paths and files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -159,28 +157,36 @@
        "['2003_12_dir',\n",
        " '2006_12_dir',\n",
        " '2008_12_dir',\n",
+       " '2009_12_dir',\n",
+       " '2010_12_dir',\n",
        " '2011_12_dir',\n",
-       " '2013_06_dir',\n",
+       " '2012_12_dir',\n",
        " '2013_12_dir',\n",
-       " '2015_12_dir',\n",
-       " '2016_06_dir',\n",
+       " '2014_12_dir',\n",
        " '2016_12_dir']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mypath = \"data/filtered_graphs/\"\n",
+    "mypath = \"data/filtered_graphs/final/\"\n",
     "files = get_files(mypath, \"dir\")\n",
     "files"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving graphs with network stats"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -195,16 +201,18 @@
       "Network saved as pickle on PATH:  data/graphs_sats//2006_12_dir\n",
       "Graph 2008_12_dir stats computed.\n",
       "Network saved as pickle on PATH:  data/graphs_sats//2008_12_dir\n",
+      "Graph 2009_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2009_12_dir\n",
+      "Graph 2010_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2010_12_dir\n",
       "Graph 2011_12_dir stats computed.\n",
       "Network saved as pickle on PATH:  data/graphs_sats//2011_12_dir\n",
-      "Graph 2013_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs_sats//2013_06_dir\n",
+      "Graph 2012_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2012_12_dir\n",
       "Graph 2013_12_dir stats computed.\n",
       "Network saved as pickle on PATH:  data/graphs_sats//2013_12_dir\n",
-      "Graph 2015_12_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs_sats//2015_12_dir\n",
-      "Graph 2016_06_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs_sats//2016_06_dir\n",
+      "Graph 2014_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2014_12_dir\n",
       "Graph 2016_12_dir stats computed.\n",
       "Network saved as pickle on PATH:  data/graphs_sats//2016_12_dir\n"
      ]
