--- a/add_efficiency.ipynb
+++ b/add_efficiency.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -60,29 +60,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "eff_files = sorted(get_files(path,\"eff.csv\"))"
+    "eff_files = sorted(get_files(path,\"eff.csv\"))\n",
+    "# eff_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2003_12_dir',\n",
+       " '2006_12_dir',\n",
+       " '2008_12_dir',\n",
+       " '2009_12_dir',\n",
+       " '2010_12_dir',\n",
+       " '2011_12_dir',\n",
+       " '2012_12_dir',\n",
+       " '2013_12_dir',\n",
+       " '2014_12_dir',\n",
+       " '2015_12_dir',\n",
+       " '2016_12_dir']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "net_files = sorted(get_files(path,\"dir\"))"
+    "net_files = sorted(get_files(path,\"dir\"))\n",
+    "# net_files = [x for x in net_files if \"_06\" not in x]\n",
+    "# net_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -105,8 +129,13 @@
       "Saved to: data/graphs_eff/2003_12_dir\n",
       "Saved to: data/graphs_eff/2006_12_dir\n",
       "Saved to: data/graphs_eff/2008_12_dir\n",
+      "Saved to: data/graphs_eff/2009_12_dir\n",
+      "Saved to: data/graphs_eff/2010_12_dir\n",
       "Saved to: data/graphs_eff/2011_12_dir\n",
+      "Saved to: data/graphs_eff/2012_12_dir\n",
       "Saved to: data/graphs_eff/2013_12_dir\n",
+      "Saved to: data/graphs_eff/2014_12_dir\n",
+      "Saved to: data/graphs_eff/2015_12_dir\n",
       "Saved to: data/graphs_eff/2016_12_dir\n"
      ]
     }
@@ -125,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +176,7 @@
        "1000016"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +209,7 @@
        " 'party': []}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
