--- a/connecting_data.ipynb
+++ b/connecting_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +209,7 @@
        "9          []  [politician]                                    []  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +287,7 @@
        "4    81474.0  2001"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -333,7 +333,7 @@
        "(46479, 14)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -355,7 +355,7 @@
        "(46479, 2)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +465,7 @@
        "4           Adnan_Kassar   3899.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -488,7 +488,7 @@
        "(46479, 2)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -637,14 +637,14 @@
     "def save(df, path,year):\n",
     "    \"\"\" Saves df as pcikle\n",
     "    \"\"\"\n",
-    "    path = path+str(year)+\".csv\"\n",
+    "    path = path+str(year)\n",
     "    df.to_pickle(path)\n",
     "    print(\"File saved at {}\".format(path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -721,12 +721,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved at data/connected_sources/2008.csv\n",
-      "File saved at data/connected_sources/2009.csv\n",
-      "File saved at data/connected_sources/2010.csv\n",
-      "File saved at data/connected_sources/2012.csv\n",
-      "File saved at data/connected_sources/2014.csv\n",
-      "File saved at data/connected_sources/2016.csv\n"
+      "File saved at data/connected_sources/2008\n",
+      "File saved at data/connected_sources/2009\n",
+      "File saved at data/connected_sources/2010\n",
+      "File saved at data/connected_sources/2012\n",
+      "File saved at data/connected_sources/2014\n",
+      "File saved at data/connected_sources/2016\n"
      ]
     }
    ],
