prepare data still needs to save the dataframes

--- a/model/prepare_data.ipynb
+++ b/model/prepare_data.ipynb
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -930,17 +930,8 @@
     "#         print(value)\n",
     "        return value\n",
     "    else:\n",
-    "        return \"none\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "        return \"none\"\n",
+    "    \n",
     "def filter_by_value(df, column, value):\n",
     "    \"\"\" Returns dataframe after filtering colums per value \n",
     "    \"\"\"\n",
@@ -970,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -981,17 +972,7 @@
     "    if value in lst:\n",
     "        return 1\n",
     "    else:\n",
-    "        return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "        return 0\n",
     "def other_to_bin(x, lst):\n",
     "    sumed = 0\n",
     "    for i in lst:\n",
@@ -999,17 +980,8 @@
     "    if sumed > 0:\n",
     "        return 0\n",
     "    else:\n",
-    "        return 1 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "        return 1 \n",
+    "    \n",
     "def add_binary_column(df, column, column_new, value):\n",
     "    \"\"\" Adds 1 or 0 to a new column, therefore biarising the  \n",
     "    \"\"\"\n",
