--- a/model/gender_clf.ipynb
+++ b/model/gender_clf.ipynb
@@ -1805,15 +1805,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "country_dict = {\n",
+    "    \"USA\": \"american\",\n",
+    "    \"Germany\": \"german\",\n",
+    "    \"France\": \"french\",\n",
+    "    \"Great Britain\": \"british\",\n",
+    "    \"Russia\": \"russian\"\n",
+    "} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['female', 'male']\n",
+      "{0, 1}\n",
+      "[0, 1]\n",
+      "{0, 1}\n",
+      "(8030, 21) (8030,)\n",
+      "['female', 'male']\n",
+      "{0, 1}\n",
+      "[0, 1]\n",
+      "{0, 1}\n",
+      "(2272, 21) (2272,)\n",
+      "['female', 'male']\n",
+      "{0, 1}\n",
+      "[0, 1]\n",
+      "{0, 1}\n",
+      "(2422, 21) (2422,)\n",
+      "['female', 'male']\n",
+      "{0, 1}\n",
+      "[0, 1]\n",
+      "{0, 1}\n",
+      "(792, 21) (792,)\n",
+      "['female', 'male']\n",
+      "{0, 1}\n",
+      "[0, 1]\n",
+      "{0, 1}\n",
+      "(1032, 21) (1032,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Precission</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>F1-Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>0.878580</td>\n",
+       "      <td>0.867066</td>\n",
+       "      <td>0.896040</td>\n",
+       "      <td>0.881315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>0.905495</td>\n",
+       "      <td>0.914414</td>\n",
+       "      <td>0.894273</td>\n",
+       "      <td>0.904232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>France</td>\n",
+       "      <td>0.894845</td>\n",
+       "      <td>0.928571</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0.896552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Great Britain</td>\n",
+       "      <td>0.849057</td>\n",
+       "      <td>0.888889</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.842105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Russia</td>\n",
+       "      <td>0.942029</td>\n",
+       "      <td>0.908257</td>\n",
+       "      <td>0.980198</td>\n",
+       "      <td>0.942857</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Country  Accuracy  Precission    Recall  F1-Score\n",
+       "0            USA  0.878580    0.867066  0.896040  0.881315\n",
+       "1        Germany  0.905495    0.914414  0.894273  0.904232\n",
+       "2         France  0.894845    0.928571  0.866667  0.896552\n",
+       "3  Great Britain  0.849057    0.888889  0.800000  0.842105\n",
+       "4         Russia  0.942029    0.908257  0.980198  0.942857"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = \"../data/final_sets/countries/model/\"\n",
+    "year = 2016\n",
+    "lst = []\n",
+    "estimator = r_forest\n",
+    "for k,v in country_dict.items():\n",
+    "    data = pd.read_pickle(path+str(year)+\"_\"+v)\n",
+    "    data = preprocess_data_frame(data, [\"gender\"])\n",
+    "    X,y=split_dataframe(data,\"gender\")\n",
+    "    X_over, y_over = over_sample(X,y)\n",
+    "    X_over = pd.DataFrame(X_over, columns=X.columns)\n",
+    "    y_over = pd.DataFrame(y_over, columns=[\"gender\"])\n",
+    "    y_over[\"gender\"].value_counts()\n",
+    "    X_train, X_test, y_train, y_test = train_test_dfs(X_over,y_over)\n",
+    "    acc, pr, re, f1 = get_ac_pr_re_f1(estimator, X_train, X_test, y_train, y_test)\n",
+    "    lst.append([k, acc, pr, re, f1])\n",
+    "\n",
+    "pd.DataFrame(lst, columns = [\"Country\",\"Accuracy\", \"Precission\", \"Recall\", \"F1-Score\"])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "Countries"
-   ]
+   "source": []
   }
  ],
  "metadata": {
