fixed prepare data countries, error with parties 1,2,3 and other solved

--- a/model/views_prediction.ipynb
+++ b/model/views_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4250,6 +4250,246 @@
    ],
    "source": [
     "print_latex(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#DBpURL</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>WikiURL</th>\n",
+       "      <th>birthDate</th>\n",
+       "      <th>deathDate</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>full_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nationality</th>\n",
+       "      <th>...</th>\n",
+       "      <th>party</th>\n",
+       "      <th>entered</th>\n",
+       "      <th>efficiency</th>\n",
+       "      <th>eig_central</th>\n",
+       "      <th>id</th>\n",
+       "      <th>in_degree</th>\n",
+       "      <th>k_core</th>\n",
+       "      <th>out_degree</th>\n",
+       "      <th>name_u</th>\n",
+       "      <th>views</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>http://dbpedia.org/resource/Nizamettin_Erkmen</td>\n",
+       "      <td>144</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Nizamettin_Erkmen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1990-10-24 00:00:00</td>\n",
+       "      <td>nizamettin</td>\n",
+       "      <td>Nizamettin+Erkmen</td>\n",
+       "      <td>male</td>\n",
+       "      <td>[ erkmen nizamettin ]</td>\n",
+       "      <td>[turkish]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>0.760000</td>\n",
+       "      <td>0.000046</td>\n",
+       "      <td>144</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Nizamettin_Erkmen</td>\n",
+       "      <td>916.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>http://dbpedia.org/resource/Claudio_Scajola</td>\n",
+       "      <td>183</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Claudio_Scajola</td>\n",
+       "      <td>1948-01-15 00:00:00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>claudio</td>\n",
+       "      <td>Claudio+Scajola</td>\n",
+       "      <td>male</td>\n",
+       "      <td>[ claudio scajola ]</td>\n",
+       "      <td>[italian]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[ forza italia (2013) ]</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>0.899654</td>\n",
+       "      <td>0.000801</td>\n",
+       "      <td>183</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Claudio_Scajola</td>\n",
+       "      <td>4100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>http://dbpedia.org/resource/Thomas_Clausen_(Lo...</td>\n",
+       "      <td>246</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Thomas_Clausen_(L...</td>\n",
+       "      <td>1939-12-22 00:00:00</td>\n",
+       "      <td>2002-02-20 00:00:00</td>\n",
+       "      <td>thomas</td>\n",
+       "      <td>Thomas+Clausen+(Louisiana)</td>\n",
+       "      <td>male</td>\n",
+       "      <td>[ thomas greenwood clausen ,  clausen thomas g...</td>\n",
+       "      <td>[american]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[ democratic party (united states) ]</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0.734694</td>\n",
+       "      <td>0.000040</td>\n",
+       "      <td>246</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Thomas_Clausen_(Louisiana)</td>\n",
+       "      <td>1651.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>http://dbpedia.org/resource/Yang_Ti-liang</td>\n",
+       "      <td>248</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Yang_Ti-liang</td>\n",
+       "      <td>1929-06-30 00:00:00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>yang</td>\n",
+       "      <td>Yang+Ti-liang</td>\n",
+       "      <td>male</td>\n",
+       "      <td>[ ti-liang yang ]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>248</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Yang_Ti-liang</td>\n",
+       "      <td>6671.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>http://dbpedia.org/resource/Mohammad_Natsir</td>\n",
+       "      <td>259</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Mohammad_Natsir</td>\n",
+       "      <td>1908-07-17 00:00:00</td>\n",
+       "      <td>1993-03-14 00:00:00</td>\n",
+       "      <td>mohammad</td>\n",
+       "      <td>Mohammad+Natsir</td>\n",
+       "      <td>male</td>\n",
+       "      <td>[ mohammad natsir ,  natsir mohammad ]</td>\n",
+       "      <td>[indonesian]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[ masyumi party ]</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>0.814815</td>\n",
+       "      <td>0.000068</td>\n",
+       "      <td>259</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Mohammad_Natsir</td>\n",
+       "      <td>7825.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             #DBpURL   ID  \\\n",
+       "0      http://dbpedia.org/resource/Nizamettin_Erkmen  144   \n",
+       "1        http://dbpedia.org/resource/Claudio_Scajola  183   \n",
+       "2  http://dbpedia.org/resource/Thomas_Clausen_(Lo...  246   \n",
+       "3          http://dbpedia.org/resource/Yang_Ti-liang  248   \n",
+       "4        http://dbpedia.org/resource/Mohammad_Natsir  259   \n",
+       "\n",
+       "                                             WikiURL            birthDate  \\\n",
+       "0     http://en.wikipedia.org/wiki/Nizamettin_Erkmen                 None   \n",
+       "1       http://en.wikipedia.org/wiki/Claudio_Scajola  1948-01-15 00:00:00   \n",
+       "2  http://en.wikipedia.org/wiki/Thomas_Clausen_(L...  1939-12-22 00:00:00   \n",
+       "3         http://en.wikipedia.org/wiki/Yang_Ti-liang  1929-06-30 00:00:00   \n",
+       "4       http://en.wikipedia.org/wiki/Mohammad_Natsir  1908-07-17 00:00:00   \n",
+       "\n",
+       "             deathDate  first_name                   full_name gender  \\\n",
+       "0  1990-10-24 00:00:00  nizamettin           Nizamettin+Erkmen   male   \n",
+       "1                 None     claudio             Claudio+Scajola   male   \n",
+       "2  2002-02-20 00:00:00      thomas  Thomas+Clausen+(Louisiana)   male   \n",
+       "3                 None        yang               Yang+Ti-liang   male   \n",
+       "4  1993-03-14 00:00:00    mohammad             Mohammad+Natsir   male   \n",
+       "\n",
+       "                                                name   nationality   ...    \\\n",
+       "0                              [ erkmen nizamettin ]     [turkish]   ...     \n",
+       "1                                [ claudio scajola ]     [italian]   ...     \n",
+       "2  [ thomas greenwood clausen ,  clausen thomas g...    [american]   ...     \n",
+       "3                                  [ ti-liang yang ]            []   ...     \n",
+       "4             [ mohammad natsir ,  natsir mohammad ]  [indonesian]   ...     \n",
+       "\n",
+       "                                  party entered  efficiency  eig_central   id  \\\n",
+       "0                                    []    2007    0.760000     0.000046  144   \n",
+       "1               [ forza italia (2013) ]    2005    0.899654     0.000801  183   \n",
+       "2  [ democratic party (united states) ]    2013    0.734694     0.000040  246   \n",
+       "3                                    []    2007    1.000000     0.000007  248   \n",
+       "4                     [ masyumi party ]    2007    0.814815     0.000068  259   \n",
+       "\n",
+       "   in_degree  k_core  out_degree                      name_u   views  \n",
+       "0          2       4           3           Nizamettin_Erkmen   916.0  \n",
+       "1          9      10           8             Claudio_Scajola  4100.0  \n",
+       "2          2       7           5  Thomas_Clausen_(Louisiana)  1651.0  \n",
+       "3          2       5           4               Yang_Ti-liang  6671.0  \n",
+       "4          4       4           5             Mohammad_Natsir  7825.0  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_pickle(\"../data/connected_sources/2016\")\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data[\"other_p\"].value_counts()"
    ]
   },
   {
